// Copyright 2022 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package google.cloud.bigquery.storage.v1;

import "google/protobuf/descriptor.proto";

option go_package = "cloud.google.com/go/bigquery/storage/managedwriter/internal/annotations;annotations";
option java_package = "com.google.cloud.bigquery.storage.v1";
option java_multiple_files = true;
option java_outer_classname = "AnnotationsProto";

extend google.protobuf.FieldOptions {
  // Setting the column_name extension allows users to reference
  // bigquery column independently of the field name in the protocol buffer
  // message.
  //
  // The intended use of this annotation is to reference a destination column
  // named using characters unavailable for protobuf field names (e.g. unicode
  // characters).
  //
  // More details about BigQuery naming limitations can be found here:
  // https://cloud.google.com/bigquery/docs/schemas#column_names
  //
  // This extension is currently experimental.
  optional string column_name = 454943157;
}